--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ window.Sentry.configureScope(function(scope) {
     (function() {
         oscrPupHost = "https://staging.orthoscreening.com"; oscrPupId = "a7d51f7b-9d09-499c-b097-63202e17e605"; 
         oscrPupTrigger = ["b"]; 
-        oscrPupBtnPos = "r"; oscrPupBtnTxt = "New Virtual Smile Consultation. Click here"; oscrPupBtnColor = "#C11818"; oscrPupBtnTextColor = "#FFFFFF"; oscrPupBtnRadius = "30"; oscrPupBtnShowIcon = true; ;
+        oscrPupBtnPos = "bl"; oscrPupBtnTxt = "New Virtual Smile Consultation. Click here"; oscrPupBtnColor = "#C11818"; oscrPupBtnTextColor = "#FFFFFF"; oscrPupBtnRadius = "30"; oscrPupBtnShowIcon = true; ;
         var orthscr = document.createElement("script"); 
         var s = document.getElementsByTagName("body")[0]; 
         orthscr.type = "text/javascript"; orthscr.async = true; 
